--- a/assets/src/styles/blocks/Spreadsheet.scss
+++ b/assets/src/styles/blocks/Spreadsheet.scss
@@ -1,12 +1,23 @@
+.block-spreadsheet {
+  display: inline-block;
+  margin-top: $space-xs;
+  margin-bottom: $space-md;
+
+  @include large-and-up {
+    margin-top: $space-md;
+    margin-bottom: $space-lg;
+  }
+}
+
 .table-wrapper {
   overflow: auto;
 
   max-height: 320px;
-  margin: 1.5rem 0;
+  margin-top: 1.5rem;
 
   @include medium-and-up {
     max-height: 520px;
-    margin: 2rem 0;
+    margin-top: 2rem;
   }
 
   @include large-and-up {
@@ -58,7 +69,6 @@ table.spreadsheet-table {
   width: 350px;
   max-width: 100%;
   height: 2rem;
-  margin: 10px 0;
   padding: 0 8px;
   border-color: var(--spreadsheet-header-background, $table-header-grey);
   border: 1px solid;
